--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Andy",
   "license": "MIT",
   "dependencies": {
+    "jquery": "^3.3.1",
     "angular": "^1.5.7",
     "angular-route": "^1.5.7",
     "angular-ui-router": "^0.4.2",
